--- a/gradle.properties
+++ b/gradle.properties
@@ -4,28 +4,22 @@
 pluginGroup = com.github.cnahyz.mysql2yml
 pluginName = mysql2yml
 pluginVersion = 0.0.1
-
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
-pluginSinceBuild = 203
-pluginUntilBuild = 212.*
-
+pluginSinceBuild=203
+pluginUntilBuild=212.*
 # Plugin Verifier integration -> https://github.com/JetBrains/gradle-intellij-plugin#plugin-verifier-dsl
 # See https://jb.gg/intellij-platform-builds-list for available build versions.
-pluginVerifierIdeVersions = 2020.3.4, 2021.1.3, 212.4535.15
-
-platformType = IC
-platformVersion = 2020.3.4
-platformDownloadSources = true
-
+pluginVerifierIdeVersions=2020.3.4, 2021.1.3, 212.4535.15
+platformType=IU
+platformVersion=212.5080.39-EAP-SNAPSHOT
+platformDownloadSources=true
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins =
-
+platformPlugins=java,DatabaseTools
 # Java language level used to compile sources and to generate the files for - Java 11 is required since 2020.3
-javaVersion = 11
-
-gradleVersion = 7.2
+javaVersion=11
+gradleVersion=7.2
 
 # Opt-out flag for bundling Kotlin standard library.
 # See https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library for details.
